--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
 <body>
 <h1>Welcome to github</h1>
-
 <b>heading1
+<ul>
+<li>Home</li>
+<li>About us</li>
+<li>Product</li>
+<li>Contact</li>
+<>
 </b>
 </ul>
 </body>
