--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <li>About us</li>
 <li>Product</li>
 <li>Contact</li>
+
 <>
 </b>
 <ul>
@@ -22,6 +23,6 @@
 </ul>
 </ul>
 </body>
-
+<p>Aded paragraph</p>
 <b>resolve</b>
 </html>
